# mysnake

./: .gitignore  CMakeLists.txt  README.md  food.c  game.c  list.c  main.c  mysnake.c  record.c  scoreboard.c  set_ticker.c  snake.c
.github/workflows/: codeql-analysis.yml
inc/: fatal.h  food.h  game.h  list.h  mysnake.h  record.h  scoreboard.h  settings.h  snake.h
